[workspace]

[package]
name = "cartan-py"
version = "0.6.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Python bindings for the cartan Riemannian geometry library"
repository = "https://github.com/alejandro-soto-franco/cartan"
publish = false

[lib]
name = "cartan"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39", "multiple-pymethods"] }
numpy = "0.23"
nalgebra = { version = "0.35", features = ["std"] }
cartan-core = { path = "../cartan-core", features = ["std"] }
cartan-manifolds = { path = "../cartan-manifolds", features = ["std"] }
cartan-optim = { path = "../cartan-optim", features = ["std"] }
cartan-geo = { path = "../cartan-geo", features = ["std"] }
cartan-dec = { path = "../cartan-dec" }
cartan-stochastic = { path = "../cartan-stochastic" }
nalgebra-sparse = { version = "0.12" }
rand = { version = "0.9", features = ["std_rng", "std", "os_rng", "thread_rng"] }
rand_distr = { version = "0.5" }
