[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cartan"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
]
version = "0.5.0"
description = "Python bindings for the cartan Riemannian geometry library"
license = { text = "MIT" }

[project.optional-dependencies]
dec = ["scipy>=1.7"]
dev = ["pytest", "hypothesis", "scipy>=1.7"]

[tool.maturin]
features = []
manifest-path = "Cargo.toml"
module-name = "cartan"
