[package]
name = "cartan-simplicial"
description = "Runtime dimension-generic simplicial topology and intrinsic Regge geometry for cartan"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cartan-exterior = { path = "../cartan-exterior", version = "0.6" }
nalgebra  = { workspace = true }
sprs      = { workspace = true }
indexmap  = { workspace = true }
rayon     = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
