[package]
name = "cartan-stochastic"
description = "Stochastic analysis on manifolds: orthonormal frame bundle, horizontal lift, Stratonovich development. Foundation for Eells-Elworthy-Malliavin Brownian motion and Bismut-Elworthy-Li Greeks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["riemannian", "stochastic", "brownian-motion", "malliavin", "manifold"]
categories = ["mathematics", "science"]

[dependencies]
cartan-core = { path = "../cartan-core", version = "0.5.0" }
nalgebra = { workspace = true, features = ["std"] }
rand = { workspace = true, features = ["std"] }
rand_distr = { workspace = true, features = ["std"] }
thiserror.workspace = true

[dev-dependencies]
cartan-manifolds = { path = "../cartan-manifolds", version = "0.5.0", features = ["std"] }
approx.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
