[project]
name = "cartan-viz"
version = "0.1.0"
description = "Flowforms-style dashboard visualization for cartan run directories"
requires-python = ">=3.13"
dependencies = [
    "pyvista>=0.48",
    "matplotlib>=3.9",
    "cmocean>=4.0",
    "imageio>=2.37",
    "imageio-ffmpeg>=0.6",
    "numpy>=2.0",
    "pandas>=2.2",
    "pillow>=10.0",
]

[project.scripts]
cartan-viz = "cartan_viz.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
