[package]
name = "cartan"
description = "Riemannian geometry, manifold optimization, and geodesic computation in Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["riemannian", "manifold", "optimization", "geometry", "geodesic"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan"
homepage = "https://cartan.sotofranco.dev"

[dependencies]
cartan-core = { path = "../cartan-core", version = "0.1" }
cartan-nalgebra = { path = "../cartan-nalgebra", version = "0.1" }
cartan-manifolds = { path = "../cartan-manifolds", version = "0.1" }
cartan-optim = { path = "../cartan-optim", version = "0.1" }
cartan-geo = { path = "../cartan-geo", version = "0.1" }
cartan-dec = { path = "../cartan-dec", version = "0.1" }

[dev-dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
