[package]
name = "cartan"
description = "Riemannian geometry, manifold optimization, and geodesic computation in Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["riemannian", "manifold", "optimization", "geometry", "geodesic"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan"
homepage = "https://cartan.sotofranco.dev"

[features]
default = ["full"]
# full: includes cartan-dec (rayon + mesh allocation). Requires std.
# Disable this feature to get a no_std-compatible facade:
#   cartan = { version = "0.4", default-features = false, features = ["alloc"] }
full = ["dep:cartan-dec", "std"]
std = ["alloc", "cartan-core/std", "cartan-manifolds/std", "cartan-optim/std", "cartan-geo/std"]
alloc = ["cartan-core/alloc", "cartan-manifolds/alloc", "cartan-optim/alloc", "cartan-geo/alloc"]

[dependencies]
cartan-core = { path = "../cartan-core", version = "0.4", default-features = false }
cartan-manifolds = { path = "../cartan-manifolds", version = "0.4", default-features = false }
cartan-optim = { path = "../cartan-optim", version = "0.4", default-features = false }
cartan-geo = { path = "../cartan-geo", version = "0.4", default-features = false }
cartan-dec = { path = "../cartan-dec", version = "0.4", optional = true }

[dev-dependencies]
rand = { workspace = true, features = ["std_rng", "std"] }
rand_distr = { workspace = true }
nalgebra = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
