[package]
name = "cartan-bench"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "cartan-bench"
path = "src/main.rs"

[dependencies]
cartan-core = { path = "../../cartan-core", features = ["std"] }
cartan-manifolds = { path = "../../cartan-manifolds", features = ["std"] }
cartan-optim = { path = "../../cartan-optim", features = ["std"] }
cartan-stochastic = { path = "../../cartan-stochastic" }
nalgebra = { version = "0.33", features = ["std"] }
rand = { version = "0.9", features = ["std_rng", "std"] }
rand_distr = { version = "0.5", features = ["std"] }
serde_json = { version = "1", features = ["std"] }
clap = { version = "4", features = ["derive"] }
